--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,8 +12,10 @@ RUN npm run build
 
 FROM nginx:alpine AS runner
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 COPY --from=builder /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off"]
+CMD ["nginx", "-g", "daemon off;"]
