--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:8
@@ -20,7 +18,7 @@ services:
 
   backend:
     image: rajatrulaniya/devsecops-backend:latest
-    container_name: backend-api
+    container_name: backend-api`
     
     environment:
       DB_HOST: mysql
