Update nginx config file for backend api communication

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
 
   backend:
     image: rajatrulaniya/devsecops-backend:latest
-    container_name: backend-api`
+    container_name: backend-api
     
     environment:
       DB_HOST: mysql
