--- a/k8s-manifests/mysql.yaml
+++ b/k8s-manifests/mysql.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
-  namespace: dev
+  namespace: prod
 spec:
   selector:
     app: mysql
@@ -11,28 +11,12 @@ spec:
   - port: 3306
     targetPort: 3306
 
-
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-  namespace: dev
-spec:
-  resources:
-    requests:
-      storage: 5Gi
-  volumeMode: Filesystem
-  storageClassName: ebs-sc
-  accessModes:
-    - ReadWriteOnce
-
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-config
-  namespace: dev
+  namespace: prod
 data:
   MYSQL_DATABASE: crud_app
 
@@ -41,7 +25,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-initdb-config
-  namespace: dev
+  namespace: prod
 data:
   init.sql: |
     CREATE DATABASE IF NOT EXISTS crud_app;
@@ -63,17 +47,18 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: dev
+  namespace: prod
 stringData:
   MYSQL_ROOT_PASSWORD: admin
 
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mysql
-  namespace: dev
+  namespace: prod
 spec:
+  serviceName: mysql
   replicas: 1
   selector:
     matchLabels:
@@ -116,15 +101,22 @@ spec:
 
         volumeMounts:
           - mountPath: /var/lib/mysql
-            name: mysql-storage
+            name: mysql-persistent-storage
 
           - mountPath: /docker-entrypoint-initdb.d
             name: initdb
 
       volumes:
-        - name: mysql-storage
-          persistentVolumeClaim:
-            claimName: mysql-pvc
         - name: initdb
           configMap:
             name: mysql-initdb-config
+
+  volumeClaimTemplates:
+    - metadata:
+        name: mysql-persistent-storage
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        storageClassName: ebs-sc
+        resources:
+          requests:
+            storage: 5Gi
